Fixed bugs and erros